follow me, twitter links

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -284,7 +284,7 @@ a {
 }
 
 /* line 196, ../../assets/scss/style.scss */
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   margin: 0;
@@ -302,12 +302,18 @@ h1, h2, h3 {
   font-size: 1.7rem;
   text-transform: uppercase;
 }
+/* line 213, ../../assets/scss/style.scss */
+.post-content h4 {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
 
-/* line 215, ../../assets/scss/style.scss */
+/* line 220, ../../assets/scss/style.scss */
 pre {
   margin-bottom: 1em;
 }
-/* line 216, ../../assets/scss/style.scss */
+/* line 221, ../../assets/scss/style.scss */
 pre code {
   font-family: 'Source Code Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
@@ -318,16 +324,16 @@ pre code {
   max-width: 960px;
   overflow: auto;
 }
-/* line 225, ../../assets/scss/style.scss */
+/* line 230, ../../assets/scss/style.scss */
 pre code.hljs {
   padding: 2em;
 }
-/* line 228, ../../assets/scss/style.scss */
+/* line 233, ../../assets/scss/style.scss */
 pre code span {
   font-weight: 400;
 }
 
-/* line 235, ../../assets/scss/style.scss */
+/* line 240, ../../assets/scss/style.scss */
 h2 {
   letter-spacing: -0.02em;
   font-weight: 700;
@@ -338,29 +344,29 @@ h2 {
   margin-bottom: 2px;
 }
 
-/* line 244, ../../assets/scss/style.scss */
+/* line 249, ../../assets/scss/style.scss */
 p {
   display: block;
   margin-bottom: 30px;
 }
 
-/* line 249, ../../assets/scss/style.scss */
+/* line 254, ../../assets/scss/style.scss */
 article {
   margin-bottom: 60px;
 }
 
-/* line 253, ../../assets/scss/style.scss */
+/* line 258, ../../assets/scss/style.scss */
 #disqus_thread {
   margin-bottom: 60px;
 }
 
-/* line 256, ../../assets/scss/style.scss */
+/* line 261, ../../assets/scss/style.scss */
 .homeLink {
   font-size: 12px;
   padding-left: 10px;
 }
 
-/* line 261, ../../assets/scss/style.scss */
+/* line 266, ../../assets/scss/style.scss */
 .applicationFooter {
   margin-top: 160px;
   border-collapse: collapse;
@@ -369,18 +375,18 @@ article {
   background-color: #ddddde;
   color: #777776;
 }
-/* line 268, ../../assets/scss/style.scss */
+/* line 273, ../../assets/scss/style.scss */
 .applicationFooter a {
   color: #333332;
 }
-/* line 271, ../../assets/scss/style.scss */
+/* line 276, ../../assets/scss/style.scss */
 .applicationFooter .footer-row {
   overflow: hidden;
   max-width: 960px;
   margin: 0px auto;
   position: relative;
 }
-/* line 276, ../../assets/scss/style.scss */
+/* line 281, ../../assets/scss/style.scss */
 .applicationFooter .footer-row section {
   position: relative;
   float: left;
@@ -393,7 +399,7 @@ article {
   height: 100%;
   padding: 3em;
 }
-/* line 281, ../../assets/scss/style.scss */
+/* line 286, ../../assets/scss/style.scss */
 .applicationFooter .footer-row section .subtitle {
   font-size: 16px;
   line-height: 22px;
@@ -402,16 +408,16 @@ article {
   color: #999998;
   margin-bottom: .5rem;
 }
-/* line 293, ../../assets/scss/style.scss */
+/* line 298, ../../assets/scss/style.scss */
 .applicationFooter .footer-row section.about {
   text-align: right;
 }
-/* line 296, ../../assets/scss/style.scss */
+/* line 301, ../../assets/scss/style.scss */
 .applicationFooter .footer-row section.join {
   border-left: solid 1px #bbb;
   float: right;
 }
-/* line 301, ../../assets/scss/style.scss */
+/* line 306, ../../assets/scss/style.scss */
 .applicationFooter .footer-row .logo {
   display: inline-block;
   width: 64px;
@@ -419,20 +425,20 @@ article {
   position: relative;
   margin-bottom: 3em;
 }
-/* line 307, ../../assets/scss/style.scss */
+/* line 312, ../../assets/scss/style.scss */
 .applicationFooter .footer-row .logo svg {
   fill: #444443;
 }
 
-/* line 314, ../../assets/scss/style.scss */
+/* line 319, ../../assets/scss/style.scss */
 .socialShare {
   text-align: center;
 }
-/* line 316, ../../assets/scss/style.scss */
+/* line 321, ../../assets/scss/style.scss */
 .socialShare h2 {
   font-size: 2em;
 }
-/* line 319, ../../assets/scss/style.scss */
+/* line 324, ../../assets/scss/style.scss */
 .socialShare a.button {
   font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
@@ -446,7 +452,7 @@ article {
   border-radius: 0.15em;
   text-decoration: none;
 }
-/* line 331, ../../assets/scss/style.scss */
+/* line 336, ../../assets/scss/style.scss */
 .socialShare a.button.twitter {
   background-color: #00aced;
   color: white;
