--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -193,7 +193,7 @@ margin-top: 12px;
   }
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   margin: 0;
@@ -209,6 +209,11 @@ h1, h2, h3 {
   h3 {
     font-size: 1.7rem;
     text-transform: uppercase;
+  }
+  h4 {
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: 600;
   }
 }
 
