--- a/packages/mp:app-posts/components/social.html
+++ b/packages/mp:app-posts/components/social.html
@@ -4,5 +4,10 @@
   <h3>Then share this resource with your peers.</h3>
   <br/>
   <a href="{{url}}" class="button twitter"><i class="fa fa-twitter fa-fw"></i> Share with Twitter</a>
+  <br/>
+  <br/>
+  <h3>Or follow me on Twitter for other updates</h3>
+  <a href="https://twitter.com/Sewdn" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Sewdn</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
 </template>
